grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $.frontmatter,
        $.directive,
        $.comment,
        $.diagram,
        $.common_statement,
        $.sequence_message_statement,
        $.flow_statement,
        $.architecture_statement,
        $.cynefin_statement,
        $.event_modeling_statement,
        $.git_graph_statement,
        $.info_statement,
        $.packet_statement,
        $.pie_statement,
        $.radar_statement,
        $.tree_statement,
        $.wardley_statement,
        $.generic_statement,
        $._terminator,
      ),

    diagram_type: (_) => token(prec(20, typeChoice(diagramTypes))),

    direction: (_) => choice('TB', 'TD', 'BT', 'RL', 'LR', 'BR', '<', '>', '^', 'v'),

    flow_statement: ($) =>
      choice(
        $.flow_direction_statement,
        $.subgraph_statement,
        $.end_statement,
        $.class_def_statement,
        $.class_statement,
        $.style_statement,
        $.link_style_statement,
        $.click_statement,
        $.flow_edge_statement,
        $.flow_node_statement,
      ),

    subgraph_statement: ($) =>
      seq(
        'subgraph',
        optional(field('id', $.identifier)),
        optional(field('label', choice($.square_label, $.quoted_string, $._line_remainder))),
        $._terminator,
      ),

    end_statement: ($) => seq('end', $._terminator),

    class_def_statement: ($) =>
      seq(
        'classDef',
        field('name', $.identifier),
        optional($.style_list),
        $._terminator,
      ),

    class_statement: ($) =>
      seq(
        'class',
        field('targets', $.identifier_list),
        field('class_name', $.identifier),
        $._terminator,
      ),

    style_statement: ($) =>
      seq(
        'style',
        field('target', $.identifier),
        optional($.style_list),
        $._terminator,
      ),

    flow_edge_statement: ($) =>
      prec(PREC.flow_statement, seq(
        field('source', $.flow_node),
        repeat1(seq(field('edge', $.flow_edge), field('target', $.flow_node))),
        $._terminator,
      )),

    flow_node: ($) =>
      seq(
        field('id', $.identifier),
        optional(field('shape', $.flow_shape)),
        optional($.shape_data),
        optional($.class_annotation),
      ),

    square_label: ($) => seq('[', field('text', optional($.label_text)), ']'),
    flow_edge: ($) =>
      choice(
        seq(optional($.edge_id), field('operator', $.arrow), optional($.edge_label)),
        seq(optional($.edge_id), field('operator', $.arrow_start), optional($.edge_label), field('operator_end', $.arrow)),
      ),

    arrow: (_) => token(/[ox<]?((--+|==+|-?\.+-)[-ox>]?|~~~+)/),

    style_list: ($) => repeat1(seq($.style_property, optional(','))),

    style_property: ($) =>
      seq(
        field('name', $.style_property_name),
        ':',
        field('value', $.style_value),
      ),

    style_property_name: (_) => token(/[A-Za-z_-][A-Za-z0-9_-]*/),

    style_value: (_) => token(prec(PREC.remainder, /[^,\n\r;]+/)),

    generic_statement: ($) => seq(repeat1(choice($.identifier, $.number, $.quoted_string, $.generic_token)), $._terminator),

    identifier_list: ($) => seq($.identifier, repeat(seq(',', $.identifier))),

    label_text: ($) => repeat1(choice($.html_tag, $.label_text_fragment)),

    identifier: (_) => token(/[A-Za-z_][A-Za-z0-9_-]*/),

    _line_remainder: (_) => token(prec(PREC.remainder, /[^\n\r;]+/)),

    generic_token: (_) => token(prec(PREC.generic, /[^A-Za-z_0-9"'+ \t\n\r;][^ \t\n\r;]*/)),

    _terminator: (_) => choice(/\r?\n/, ';'),
  },
});
